styling material ui grid spcing issue: horizontal scrolling

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -2,6 +2,7 @@
     box-shadow: 2px 5px 20px gray;
     height: auto;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .bills-list li {
